--- a/WebScrapper/Pipfile
+++ b/WebScrapper/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 selenium = "*"
 pymongo = "*"
 requests = "*"
+django = "*"
+django-cors-headers = "*"
+djangorestframework = "*"
 
 [dev-packages]
 
