--- a/web/backend/tsconfig.json
+++ b/web/backend/tsconfig.json
@@ -1,32 +1,13 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "build",
-    "module": "commonjs",
-    "sourceMap": true,
-    "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": false,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "noFallthroughCasesInSwitch": true,
-    "resolveJsonModule": true,
-    "paths": {
-      "@services/*": ["./services/*"],
-      "@models/*": ["./models/*"],
-      "@controllers/*": ["./controllers/*"],
-      "@middlewares/*": ["./middlewares/*"],
-      "@utils/*": ["./utils/*"],
-      "@routes/*": ["./routes/*"],
-      "@validations/*": ["./validations/*"],
-      "@startup/*": ["./startup/*"]
-    }
-  },
-  "exclude": ["node_modules", "build"]
-}
+    "compilerOptions": {
+      "target": "ES2020",
+      "module": "commonjs",
+      "rootDir": "src",
+      "outDir": "dist",
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true
+    },
+    "exclude": ["node_modules"]
+  }
+  
