--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@types/chart.js": "^2.9.41",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-image-gallery": "^1.2.4",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -21,6 +24,7 @@
     "react-image-gallery": "^1.3.0",
     "react-rater": "^6.0.5",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
