--- a/web/backend/tsconfig.json
+++ b/web/backend/tsconfig.json
@@ -6,7 +6,8 @@
       "outDir": "dist",
       "strict": true,
       "esModuleInterop": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "allowSyntheticDefaultImports": true
     },
     "exclude": ["node_modules"]
   }
