--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "dotenv": "^16.4.7",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
